--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
                 class="icon"
               />
               <h3>Experiencia</h3>
-              <p>0+ Años (Actualmente Estudiando).<br/>Full Stack Development</p>
+              <p>
+                0+ Años (Actualmente Estudiando).<br />Full Stack Development
+              </p>
             </div>
             <div class="details-containers">
               <img
@@ -101,7 +103,10 @@
                 class="icon"
               />
               <h3>Estudios</h3>
-              <p>GM Sistemas Microinformaticos.<br />Curso Des. Web FullStack Fund. Esplai.</p>
+              <p>
+                GM Sistemas Microinformaticos.<br />Curso Des. Web FullStack
+                Fund. Esplai.
+              </p>
             </div>
           </div>
           <div class="text-container">
@@ -257,6 +262,128 @@
         onclick="location.href='./#experience'"
       />
     </section>
+    <section id="projects">
+      <p class="section__text__p1">Mira lo último</p>
+      <h1 class="title">Proyectos</h1>
+      <div class="experience-details-containers">
+        <div class="about-containers">
+          <div class="details-containers color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Proyecto 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Proyecto 1</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href ='www.github.com'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href ='www.github.com'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-containers color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Proyecto 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Proyecto 1</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href ='www.github.com'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href ='www.github.com'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-containers color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Proyecto 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Proyecto 1</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href ='www.github.com'"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href ='www.github.com'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <img
+        src="./assets/arrow.png"
+        alt="arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
+    </section>
+    <section id="contact">
+      <p class="section__text__p1">Get in Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="mailto:danielhernandezmontero8@gmail.com">danielhernandezmontero8@gmail.com</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="linkedin icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://www.linkedin.com">Linkedin</a></p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <nav>
+        <div class="nav-links-conainer">
+          <ul class="nav-links">
+            <li><a href="#about">Sobre Mi</a></li>
+            <li><a href="#experience">Experiencia</a></li>
+            <li><a href="#projects">Proyectos</a></li>
+            <li><a href="#contact">Contacto</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2023 Daniel Hernández</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
